<resources>
    <string name="app_name">labsec</string>
    <string name="sex">Sex:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="activity_level">Activity level:</string>
    <string name="age">Age:</string>
    <string name="button">Button</string>
    <string name="kg">kg</string>
    <string name="sm">sm</string>
    <string name="cm">cm</string>
    <string name="years">years</string>
    <string name="calculate">Calculate</string>
</resources>